[package]
name = "packer_plugin_updater"
description = "A tool to update packer plugins"
license = "MIT"
readme = "README.md"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/napisani/packer-plugin-updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = "0.17.0"
git2 = "0.15"
console = "0.15.2"
dialoguer = "0.10.2"
home = "0.5.4"
regex = "1"
clap = { version = "4.0.29", features = ["derive"] }
openssl = { version = "0.10.35", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
